--- a/register2.html
+++ b/register2.html
@@ -104,10 +104,10 @@
     </header>
     <main>
         <form id="registerForm">
-            <input type="text" id="name" placeholder="ユーザー名" required>
-            <input type="email" id="email" placeholder="メールアドレス" required>
-            <input type="password" id="password" placeholder="パスワード" required>
-            <button type="submit">登録</button>
+            <input type="text" id="name" placeholder="性・名 or Last,First" required>
+            <input type="email" id="email" placeholder="メールアドレス（Email Address）" required>
+            <input type="password" id="password" placeholder="パスワード（Password）" required>
+            <button type="submit">登録（Sign Up）</button>
         </form>
 
 
