--- a/member.html
+++ b/member.html
@@ -256,7 +256,7 @@
         <div class="vertical-links">
             <a href="upload.html" class="button">画像データをアップロードする</a>
             <a href="#link2" class="button">現在開発中（未定エリア）</a>
-            <a href="#link3" class="button">現在開発中（未定エリア）</a>
+            <a href="version.html" class="button">WEBサイトについて for Question</a>
           </div>
           
      
