--- a/FAQ.html
+++ b/FAQ.html
@@ -136,7 +136,12 @@
 
         <div class="faq-item">
             <div class="faq-question">Q5: このWEBサイトの運営者は誰ですか？</div>
-            <div class="faq-answer">２０２４年現在、代表運営者は池田　悠耶（鎮西学院大学　４年生）です。詳しくはこちら→<a href="s"WEBサイト運営について</a></div>
+            <div class="faq-answer">２０２４年現在、代表運営者は池田悠耶（鎮西学院大学４年生）です。詳しくはこちら→></div>
+        </div>
+
+        <div class="faq-item">
+            <div class="faq-question">Q6: 管理者になりたいです。申請方法を教えてください。</div>
+            <div class="faq-answer">サポートセンターにて手続きが必要です。メールまたは電話で新規管理者希望を担当者に伝えてください。サポートセンターページはこちらをクリック→<a href="support.html">サポートセンター</a></div>
         </div>
 
         
