--- a/support.html
+++ b/support.html
@@ -134,7 +134,7 @@
             <div class="card">
                 <h3>よくある質問</h3>
                 <p>サポートが必要な場合、まずはよくある質問（FAQ）をご覧ください。</p>
-                <button onclick="location.href='faq.html'">FAQを見る（現在利用不可）</button>
+                <button onclick="location.href='FAQ.html'">FAQを見る</button>
             </div>
 
             <div class="card">
