--- a/vvinformation.html
+++ b/vvinformation.html
@@ -101,7 +101,17 @@
     <div class="container">
         <h1>バージョン履歴</h1>
         <ul class="version-history">
-             <li>
+            <li>
+                <div class="version-title">version24.2🚀</div>
+                <div class="version-date">2024年月日</div>
+                <div class="version-desc">
+                    - 開発中<br>
+                    
+                </div>
+            </li>
+
+
+            <li>
                 <div class="version-title">version24.1🚀</div>
                 <div class="version-date">2024年9月10日</div>
                 <div class="version-desc">
