--- a/version.html
+++ b/version.html
@@ -109,6 +109,8 @@
             <button onclick="location.href='support.html'">サポートセンター</button>
             <button onclick="location.href='page5.html'">利用規約・プライバシーの暗示（準備中）</button>
             <button onclick="location.href='vvinformation.html'">version詳細</button>
+            <button onclick="location.href='aouto.html'">推奨環境の情報</button>
+            <button onclick="location.href='.html'">N</button>
         </div>
     </section>
 
