--- a/admin.html
+++ b/admin.html
@@ -160,7 +160,7 @@
                 <a href="upload.html" class="link-button">原稿を投稿する</a>
                 <a href="latest-edits.html" class="link-button">最近の編集者確認</a>
                 
-                <a href="export.html" class="link-button">データ出力 for Excel(一部利用不可）</a>
+                <a href="export.html" class="link-button">データ出力 for Excel（一部利用不可）</a>
                 <a href="" class="link-button">ユーザー　一覧（現在開発中のため利用不可）</a>
             </section>
             
