--- a/version.html
+++ b/version.html
@@ -103,20 +103,22 @@
          <h2>ご希望のカテゴリを選択してください</h2>
 
         <div class="button-container">
-            <button onclick="location.href='page1.html'">WEBサイト運営について</button>
+            <button onclick="location.href='no1.html'">WEBサイト運営について</button>
             <button onclick="location.href='page2.html'">WEBサイトご利用案内（準備中）</button>
             <button onclick="location.href='FAQ.html'">FAQページ</button>
             <button onclick="location.href='support.html'">サポートセンター</button>
-            <button onclick="location.href='page5.html'">利用規約・プライバシーの暗示（準備中）</button>
+            <button onclick="location.href='priv.html'">利用規約・プライバシーの暗示</button>
             <button onclick="location.href='vvinformation.html'">version詳細</button>
             <button onclick="location.href='aouto.html'">推奨環境の情報</button>
-            <button onclick="location.href='.html'">N</button>
+            <button onclick="location.href='EAP.html'">Exclusive Access Page</button>
         </div>
     </section>
 
     <footer>
         <button onclick="goBack()">ホームに戻る</button>
-        <p>2024 Created by Yuya.I</p>
+        <footer>
+            <p>&copy; 2024 Created by Yuya.I</p>
+        </footer>
     </footer>
 
     <script>
