--- a/member.html
+++ b/member.html
@@ -255,7 +255,7 @@
 
         <div class="vertical-links">
             <a href="upload.html" class="button">画像データをアップロードする</a>
-            <a href="#link2" class="button">現在開発中（未定エリア）</a>
+            <a href="#link2" class="button">フィードバックを送る（開発中）</a>
             <a href="version.html" class="button">WEBサイトについて for Question</a>
           </div>
           
