--- a/FAQ.html
+++ b/FAQ.html
@@ -136,7 +136,7 @@
 
         <div class="faq-item">
             <div class="faq-question">Q5: このWEBサイトの運営者は誰ですか？</div>
-            <div class="faq-answer">２０２４年現在、代表運営者は池田悠耶（鎮西学院大学４年生）です。詳しくはこちら→></div>
+            <div class="faq-answer">２０２４年現在、代表運営者は池田悠耶（鎮西学院大学４年生）です。詳しくはこちら→<a href="no1.html">WEBサイト運営者について</a></div>
         </div>
 
         <div class="faq-item">
@@ -157,7 +157,7 @@
             window.history.back();
         }
 
-        // FAQの質問をクリックして回答を表示
+        
         const faqQuestions = document.querySelectorAll('.faq-question');
         faqQuestions.forEach(question => {
             question.addEventListener('click', () => {
