--- a/admin.html
+++ b/admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>管理者ページ</title>
-    <link rel="stylesheet" href="styles.css"> <!-- 外部CSSファイルをリンク -->
+    <link rel="stylesheet" href="styles.css"> 
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -160,7 +160,7 @@
                 <a href="upload.html" class="link-button">原稿を投稿する</a>
                 <a href="latest-edits.html" class="link-button">最近の編集者確認</a>
                 
-                <a href="export.html" class="link-button">データ出力 for Excel（一部利用不可）</a>
+                <a href="export.html" class="link-button">データ出力 for Excel</a>
                 <a href="" class="link-button">ユーザー　一覧（現在開発中のため利用不可）</a>
             </section>
             
@@ -170,6 +170,11 @@
                     <textarea id="notification-content" rows="4" placeholder="お知らせの内容を入力してください..." required></textarea>
                     <button type="submit">お知らせを投稿</button>
                 </form>
+            </section>
+
+            <section class="links">
+                <h2>その他</h2>
+                <a href="EAP.html" class="link-button">Exclusive Access Page</a>  
             </section>
         </main>
     </div>
