--- a/guide.html
+++ b/guide.html
@@ -81,22 +81,10 @@
                 <p>初期登録したメールアドレスとパスワードを入力し「ログイン」をクリックしてください。また、管理者の方は
                     「管理者ログイン」よりログインをよろしくお願いします。
                 </p>
-                <p>※ログインできない・パスワードを忘れた場合、運営者にメールでお問い合わせ又は新規登録をしてください。</p>
+                <p>※ログインできない・パスワードを忘れた場合、サポートセンターにメールまたは電話でお問い合わせしてください。</p>
             </div>
         </section>
-        <section class="info-section">
-            <h2>トップページに関する操作方法</h2>
-            <div class="info-content">
-                <img src="７７７７.png" alt="説明画像2">
-                <ul class="shifted">
-                 <li>ログインが完了するとトップページが表示されます。</li>
-                 <li>画面一番上には、ログインをしている人のユーザー名が表示がされます</li>
-                 <li>お知らせでは、本サイトの更新内容の表示がされます</li>
-                </ul>
-            </div>
-        </section>
-
-        <!-- 追加のセクションがあればここに追加 -->
+        
 
     </main>
     <footer>
