--- a/vvinformation.html
+++ b/vvinformation.html
@@ -105,7 +105,18 @@
                 <div class="version-title">version24.2🚀</div>
                 <div class="version-date">2024年月日</div>
                 <div class="version-desc">
-                    - 開発中<br>
+                    -  Excelへのエクスポートの追加（管理者のみ）<br>
+                    -フィードバック機能の追加<br>
+                    -Exclusive Access Pageの追加（非公開ページ）<br>
+                    -WEBサイト運営についての公開<br>
+                    -WEBサイトご利用案内の公開<br>
+                    -FAQページの公開<br>
+                    -サポートセンターの公開<br>
+                    -利用規約・プライバシーの暗示の公開<br>
+                    -Version詳細の公開<br>
+                    -推奨環境の情報の公開<br>
+                    -トップ画面に主要ボタン（リンク）の追加<br>
+                    
                     
                 </div>
             </li>
