--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>みんなの活字化広場</title>
     <link rel="stylesheet" href="styles/style.css">
     <style>
-        /* styles/style.css */
+        
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -25,7 +25,7 @@
             padding: 20px 0;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             display: flex;
-            flex-direction: column; /* Stack title and nav buttons vertically */
+            flex-direction: column; 
             align-items: center;
         }
 
@@ -35,10 +35,10 @@
         }
 
         nav {
-            margin-top: 20px; /* Space between title and nav buttons */
+            margin-top: 20px; 
             display: flex;
             flex-wrap: wrap;
-            justify-content: center; /* Center align nav buttons */
+            justify-content: center; 
         }
 
         nav button {
@@ -62,15 +62,15 @@
 
         .auth-buttons {
             display: flex;
-            justify-content: flex-end; /* Align buttons to the right */
+            justify-content: flex-end; 
             position: absolute;
-            top: 80px; /* Space below the header */
-            right: 20px; /* Space from the right edge */
-            width: calc(100% - 40px); /* Full width minus padding */
+            top: 80px; 
+            right: 20px; 
+            width: calc(100% - 40px); 
         }
 
         .auth-buttons button {
-            margin: 0 5px; /* Space between buttons */
+            margin: 0 5px; 
             padding: 10px 20px;
             font-size: 1em;
             border: none;
@@ -158,13 +158,13 @@
 
         .text-box-container {
     width: 100%;
-    max-width: 1000px; /* 最大幅を広げる */
+    max-width: 1000px; 
     margin: 1rem 0;
     display: flex;
-    flex-direction: row; /* 横並びにする */
+    flex-direction: row; 
     gap: 1rem;
-    flex-wrap: wrap; /* 画面サイズに応じて折り返す */
-    justify-content: center; /* 中央揃え */
+    flex-wrap: wrap; 
+    justify-content: center; 
 }
 
 
@@ -196,7 +196,7 @@
             margin: 0;
         }
     </style>
-    <!-- Firebase Setup -->
+    
     <script type="module">
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.20.0/firebase-app.js';
         import { getFirestore, doc, getDoc } from 'https://www.gstatic.com/firebasejs/9.20.0/firebase-firestore.js';
@@ -222,7 +222,7 @@
             <button class="nav-btn" onclick="location.href='//yuyawesleyan.github.io/archive-suzukieitarou/'">ホーム</button>
             <button class="nav-btn" onclick="location.href='call.html'">お問い合わせ</button>
             <button class="nav-btn" onclick="location.href='itsweb.html'">本WEBサイトについて</button>
-            <button class="nav-btn" onclick="location.href='guide.html'">ご利用案内</button>
+            <button class="nav-btn" onclick="location.href='guide.html'">ご登録案内</button>
         </nav>
     </header>
     <div class="auth-buttons">
