--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <style>
-    /* General styles */
+    
 body {
     font-family: Arial, sans-serif;
     background-color: #f0f2f5;
@@ -20,7 +20,7 @@ body {
     min-height: 100vh;
 }
 
-/* Header */
+
 header {
     background-color: #007BFF;
     color: white;
@@ -34,17 +34,17 @@ header {
     z-index: 1000;
 }
 
-/* Main content */
+
 main {
     display: flex;
     align-items: center;
     justify-content: center;
     flex: 1;
-    margin-top: 80px; /* Space for the fixed header */
+    margin-top: 80px; 
     width: 100%;
 }
 
-/* Login form */
+
 form {
     display: flex;
     flex-direction: column;
@@ -70,7 +70,7 @@ form input {
     font-size: 1em;
     border: 1px solid #ccc;
     border-radius: 5px;
-    box-sizing: border-box; /* Ensures padding does not affect width */
+    box-sizing: border-box; 
 }
 
 form button {
