--- a/support.html
+++ b/support.html
@@ -140,7 +140,7 @@
             <div class="card">
                 <h3>お問い合わせ</h3>
                 <p>問題が解決しない場合、お気軽にお問い合わせください。迅速に対応いたします。</p>
-                <button onclick="location.href='contact.html'">お問い合わせ</button>
+                <button onclick="location.href='whichcontact.html'">お問い合わせ</button>
             </div>
 
             
