--- a/version.html
+++ b/version.html
@@ -57,7 +57,7 @@
         border-radius: 8px;
         cursor: pointer;
         font-size: 1.1em;
-        flex: 1 1 calc(50% - 10px); /* 2列配置 */
+        flex: 1 1 calc(50% - 10px); 
         transition: background-color 0.3s ease;
     }
 
@@ -104,7 +104,7 @@
 
         <div class="button-container">
             <button onclick="location.href='no1.html'">WEBサイト運営について</button>
-            <button onclick="location.href='page2.html'">WEBサイトご利用案内（準備中）</button>
+            <button onclick="location.href='webusing.html'">WEBサイトご利用案内</button>
             <button onclick="location.href='FAQ.html'">FAQページ</button>
             <button onclick="location.href='support.html'">サポートセンター</button>
             <button onclick="location.href='priv.html'">利用規約・プライバシーの暗示</button>
