--- a/webusing.html
+++ b/webusing.html
@@ -135,8 +135,8 @@
 
         <div class="usage-section">
             <div class="usage-title">3. 画像アップロード機能</div>
-            <a href="画像アップロード機能.pdf" class="pdf-link" target="_blank">画像アップロード機能PDFを表示</a>
-            <embed src="画像アップロード機能.pdf" type="application/pdf" class="pdf-embed">
+            <a href="画像アップロード１.pdf" class="pdf-link" target="_blank">画像アップロード機能PDFを表示</a>
+            <embed src="画像アップロード１.pdf" type="application/pdf" class="pdf-embed">
         </div>
 
         
