--- a/admin.html
+++ b/admin.html
@@ -174,6 +174,7 @@
 
             <section class="links">
                 <h2>その他</h2>
+                <a href="adminwebuseing.html" class="link-button">各種操作マニュアル</a>  
                 <a href="EAP.html" class="link-button">Exclusive Access Page</a>  
             </section>
         </main>
