--- a/member.html
+++ b/member.html
@@ -248,14 +248,14 @@
         </div>
     </header>
     <main>
-        <!-- Index Section -->
+     
         <div class="section join-project-box">
             <a href="project.html" class="join-project-link">プロジェクトに参加する（活字化にチャレンジ！！）</a>
         </div>
 
         <div class="vertical-links">
             <a href="upload.html" class="button">画像データをアップロードする</a>
-            <a href="#link2" class="button">フィードバックを送る（開発中）</a>
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=ea21002@wesleyan.ac.jp,yoshino@wesleyan.ac.jp&su=フィードバック&body=【お名前】%0A【メールアドレス】%0A【ご意見】%0A%0A以下にフィードバックを記入してください。"class="button">フィードバックを送る</a>
             <a href="version.html" class="button">WEBサイトについて for Question（サポートセンター）</a>
             <a href="webusing.html" class="button">ご利用案内（各種操作方法）</a>
           </div>
