--- a/register.html
+++ b/register.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="ja">
     <style>
-
-
 body {
     font-family: 'Arial', sans-serif;
-    background: linear-gradient(135deg, #6e8efb, #a777e3);
+    background: linear-gradient(135deg, #f0f0f5, #c1e1c5);
     margin: 0;
     padding: 0;
     display: flex;
@@ -17,17 +15,19 @@ body {
     text-align: center;
     margin-top: 2rem;
     margin-bottom: 2rem;
-    color: #fff;
+    color: #333;
 }
 
 .header h1 {
-    font-size: 32px;
+    font-size: 36px;
     margin: 0;
+    color: #2c3e50;
 }
 
 .header p {
     font-size: 18px;
     margin: 0.5rem 0 0;
+    color: #7f8c8d;
 }
 
 .container {
@@ -40,58 +40,60 @@ body {
 
 .register-wrapper {
     background: #fff;
-    border-radius: 16px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    border-radius: 20px;
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
     width: 100%;
-    max-width: 360px;
-    padding: 2rem;
+    max-width: 400px;
+    padding: 2.5rem;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     text-align: center;
 }
 
 #register {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     width: 100%;
 }
 
 input {
     margin-bottom: 1rem;
-    padding: 0.75rem;
-    border: 2px solid #ddd;
-    border-radius: 8px;
+    padding: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 12px;
     font-size: 16px;
-    transition: border-color 0.3s;
-    width: calc(100% - rem);
+    transition: border-color 0.3s, box-shadow 0.3s;
+    width: 100%;
     box-sizing: border-box;
 }
 
 input:focus {
-    border-color: #6e8efb;
+    border-color: #2ecc71;
+    box-shadow: 0 0 8px rgba(46, 204, 113, 0.3);
     outline: none;
 }
 
 button {
-    padding: 0.75rem;
+    padding: 1rem;
     border: none;
-    border-radius: 8px;
-    background-color: #0a0a0b;
+    border-radius: 12px;
+    background-color: #27ae60;
     color: #fff;
-    font-size: 16px;
+    font-size: 18px;
+    font-weight: bold;
     cursor: pointer;
     transition: background-color 0.3s, transform 0.2s;
-    width: calc(100% - rem);
+    width: 100%;
     box-sizing: border-box;
 }
 
 button:hover {
-    background-color: #c5fd0b;
+    background-color: #2ecc71;
 }
 
 button:active {
-    transform: scale(0.98);
+    transform: scale(0.96);
 }
 
 #error-message, #success-message {
@@ -100,12 +102,14 @@ button:active {
 }
 
 #error-message {
-    color: #ff4d4d;
+    color: #e74c3c;
 }
 
 #success-message {
-    color: #070707;
+    color: #27ae60;
 }
+
+
 
 
     </style>
