--- a/adminwebuseing.html
+++ b/adminwebuseing.html
@@ -123,8 +123,8 @@
         
         <div class="usage-section">
             <div class="usage-title">1. パスワードの再設定手順</div>
-            <a href="パスワード再設定手順.pdf" class="pdf-link" target="_blank">パスワードの再設定手順PDFを表示</a>
-            <embed src="パスワード再設定手順.pdf" type="application/pdf" class="pdf-embed">
+            <a href="unpass.pdf" class="pdf-link" target="_blank">パスワードの再設定手順PDFを表示</a>
+            <embed src="unpass.pdf" type="application/pdf" class="pdf-embed">
         </div>
 
         <div class="usage-section">
