--- a/webusing.html
+++ b/webusing.html
@@ -123,20 +123,20 @@
         
         <div class="usage-section">
             <div class="usage-title">1. タイムラインのコメント機能</div>
-            <a href="タイムラインとコメント機能１.１.pdf" class="pdf-link" target="_blank">タイムラインのコメント機能PDFを表示</a>
-            <embed src="タイムラインとコメント機能１.１.pdf" type="application/pdf" class="pdf-embed">
+            <a href="timelineuse.pdf" class="pdf-link" target="_blank">タイムラインのコメント機能PDFを表示</a>
+            <embed src="timelineuse.pdf" type="application/pdf" class="pdf-embed">
         </div>
 
         <div class="usage-section">
             <div class="usage-title">2. 活字化入力ツール機能</div>
-            <a href="活字化入力ツール機能.pdf" class="pdf-link" target="_blank">活字化入力ツール機能PDFを表示</a>
-            <embed src="活字化入力ツール機能.pdf" type="application/pdf" class="pdf-embed">
+            <a href="katsuzika.pdf" class="pdf-link" target="_blank">活字化入力ツール機能PDFを表示</a>
+            <embed src="katsuzika.pdf" type="application/pdf" class="pdf-embed">
         </div>
 
         <div class="usage-section">
             <div class="usage-title">3. 画像アップロード機能</div>
-            <a href="画像アップロード１.pdf" class="pdf-link" target="_blank">画像アップロード機能PDFを表示</a>
-            <embed src="画像アップロード１.pdf" type="application/pdf" class="pdf-embed">
+            <a href="picupload.pdf" class="pdf-link" target="_blank">画像アップロード機能PDFを表示</a>
+            <embed src="picupload.pdf" type="application/pdf" class="pdf-embed">
         </div>
 
         
