--- a/member.html
+++ b/member.html
@@ -145,72 +145,95 @@
             transition: background-color 0.3s, color 0.3s;
         }
 
-
-     
         #timeline {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); 
+    grid-template-columns: repeat(3, 1fr); 
     gap: 16px; 
     padding: 16px;
+    margin: 30px;
 }
-
 
 .timeline-entry {
     display: flex;
     flex-direction: column;
     border: 1px solid #ddd;
-    border-radius: 8px;
-    padding: 16px;
+    border-radius: 12px;
+    padding: 12px;
     background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    margin-bottom: 16px;
+}
+
+.timeline-entry .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 8px;
+}
+
+.timeline-entry .header .username {
+    font-weight: bold;
+    font-size: 1rem;
+}
+
+.timeline-entry .header .date {
+    font-size: 0.8rem;
+    color: #555;
+}
+
+
+.timeline-entry .content {
+    display: flex;
+    flex-direction: row;
+    gap: 8px; 
+}
+
+
+.timeline-entry .text-content {
+    flex: 1;
+    font-size: 0.9rem;
+    line-height: 1.4;
+    word-wrap: break-word;
 }
 
 
 .timeline-entry img {
-    max-width: 100%;
+    max-width: 100px;
     height: auto;
-    border-radius: 8px;
-    margin-bottom: 12px;
-}
-
-.timeline-entry .text {
-    margin: 8px 0;
-    font-size: 1rem;
-    line-height: 1.6;
+    border-radius: 6px;
 }
 
 
 .timeline-entry .comment-section {
-    margin-top: 16px;
+    margin-top: 12px;
 }
-
 
 .comment-input {
     display: flex;
     align-items: flex-start;
     border: 1px solid #ddd;
-    border-radius: 24px;
-    padding: 12px; 
+    border-radius: 20px;
+    padding: 10px;
     background-color: #f0f2f5;
-    margin-bottom: 16px;
-    box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-    width: 100%; 
-    box-sizing: border-box; 
+    margin-bottom: 12px;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .comment-input textarea {
     border: none;
     background: transparent;
-    width: 100%; 
-    height: 80px; 
+    width: 100%;
+    height: 60px;
     resize: none;
     outline: none;
-    font-size: 1rem; 
-    line-height: 1.5; 
-    padding: 8px;
-    box-sizing: border-box; 
+    font-size: 0.9rem;
+    line-height: 1.4;
+    padding: 6px;
+    box-sizing: border-box;
 }
-
+      
 .vertical-links {
   display: flex;
   flex-direction: column;
@@ -235,8 +258,6 @@
   width: 230%; 
   font-family: 'Georgia', serif; 
 }
-
-
 </style>
 </head>
 <body>
