--- a/FAQ.html
+++ b/FAQ.html
@@ -105,6 +105,29 @@
         margin-top: 40px;
     }
 
+    @media (max-width: 768px) {
+    .container {
+        padding: 15px; 
+    }
+
+    h1 {
+        font-size: 2em; 
+    }
+
+    .faq-question {
+        font-size: 1.3em; 
+    }
+
+    .faq-answer {
+        font-size: 1em;
+    }
+
+    .back-button {
+        padding: 10px 20px; 
+        font-size: 1em; 
+    }
+}
+
 </style>
 <body>
     <header>
