--- a/aouto.html
+++ b/aouto.html
@@ -97,6 +97,36 @@
         margin-top: 40px;
     }
 
+    @media (max-width: 768px) {
+    header {
+        font-size: 1.5em; /* Adjust header font size for smaller screens */
+        padding: 15px; /* Adjust padding */
+    }
+
+    .container {
+        margin: 20px; /* Reduce margin for mobile devices */
+        padding: 15px; /* Reduce padding for mobile devices */
+    }
+
+    h1 {
+        font-size: 2em; /* Adjust title font size */
+    }
+
+    .requirements h2 {
+        font-size: 1.5em; /* Adjust requirements title font size */
+    }
+
+    .requirements li {
+        font-size: 1em; /* Adjust list item font size */
+    }
+
+    .back-button {
+        padding: 10px; /* Adjust padding for the back button */
+        font-size: 1em; /* Adjust back button font size */
+        margin: 20px auto; /* Reduce margin */
+    }
+}
+
 </style>
 <body>
 
