--- a/contactcall.html
+++ b/contactcall.html
@@ -101,7 +101,7 @@
 
     <div class="container">
         <h1>電話でのお問い合わせ</h1>
-        <p class="phone-number">電話番号（直通）: 0120-XXX-XXXX</p>
+        <p class="phone-number">電話番号（直通）: 0957-26-8251</p>
         <button class="btn-back" onclick="goBackTwoSteps()">戻る</button>
     </div>
 
