--- a/contactemail.html
+++ b/contactemail.html
@@ -52,6 +52,29 @@
             font-size: 14px;
             color: #666;
         }
+
+        @media (max-width: 768px) {
+    body {
+        padding: 20px; 
+    }
+
+    .container {
+        padding: 20px; 
+    }
+
+    h1 {
+        font-size: 20px; 
+    }
+
+    p {
+        font-size: 14px;
+    }
+
+    .contact-button {
+        padding: 10px 20px;
+        font-size: 16px; 
+    }
+}
     </style>
 </head>
 <body>
