--- a/index.html
+++ b/index.html
@@ -198,7 +198,38 @@ main {
     line-height: 1.6;
 }
 
-   
+@media (max-width: 768px) {
+    header h1 {
+        font-size: 2.5em; 
+    }
+
+    nav button {
+        padding: 15px 20px; 
+        font-size: 1em; 
+    }
+
+    .notice-box {
+        padding: 1rem; 
+    }
+
+    .notice-box h2 {
+        font-size: 24px; 
+    }
+
+    .notice-box p {
+        font-size: 16px; 
+    }
+
+    .text-box {
+        width: 100%; 
+        max-width: none; 
+    }
+
+    .text-box-container {
+        flex-direction: column; 
+        align-items: center; 
+    }
+}
 
     </style>
     
