--- a/index2.html
+++ b/index2.html
@@ -99,6 +99,32 @@
             text-decoration: underline;
         }
 
+        @media (max-width: 480px) {
+    h1 {
+        font-size: 28px; 
+    }
+
+    p {
+        font-size: 16px; 
+    }
+
+    #login {
+        padding: 1.5rem; 
+    }
+
+    #login input {
+        font-size: 14px; 
+    }
+
+    #login button {
+        font-size: 14px; 
+    }
+
+    .register-link {
+        font-size: 14px; 
+    }
+}
+
   
     </style>
     <script type="module" src="app.js" defer></script>
