--- a/latest-edits.html
+++ b/latest-edits.html
@@ -121,13 +121,13 @@ h1 {
 
 @media (max-width: 900px) {
     #timeline {
-        grid-template-columns: repeat(2, 1fr); /* 画面幅が狭くなったら2列に */
+        grid-template-columns: repeat(2, 1fr); 
     }
 }
 
 @media (max-width: 600px) {
     #timeline {
-        grid-template-columns: 1fr; /* さらに狭くなったら1列に */
+        grid-template-columns: 1fr; 
     }
 }
 
