--- a/login.html
+++ b/login.html
@@ -116,6 +116,49 @@ form button:hover {
     box-shadow: 0 0 10px rgba(255, 118, 117, 0.6);
 }
 
+@media (max-width: 768px) {
+    header {
+        padding: 15px 0; 
+    }
+
+    form h1 {
+        font-size: 1.5em; 
+    }
+
+    form input {
+        font-size: 0.9em; 
+    }
+
+    form button {
+        font-size: 1em; 
+    }
+
+    .nav-btn1 {
+        font-size: 14px; 
+    }
+}
+
+@media (max-width: 480px) {
+    header {
+        padding: 10px 0; 
+    }
+
+    form h1 {
+        font-size: 1.3em; 
+    }
+
+    form input {
+        font-size: 0.8em;
+    }
+
+    form button {
+        font-size: 0.9em; 
+    }
+
+    .nav-btn1 {
+        font-size: 12px; 
+    }
+}
 </style>
 <body>
     <header>
