--- a/admin.html
+++ b/admin.html
@@ -161,7 +161,7 @@
                 <a href="latest-edits.html" class="link-button">最近の編集者確認</a>
                 
                 <a href="export.html" class="link-button">データ出力 for Excel</a>
-                <a href="" class="link-button">ユーザー　一覧（現在開発中のため利用不可）</a>
+                <a href="auth.html" class="link-button">ログイン履歴管理システム</a>
             </section>
             
             <section class="form-section">
