--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@ nav button {
     font-size: 1.1em;
     border: none;
     border-radius: 5px;
-    background-color: #8dd957;
-    color: rgb(15, 15, 15);
+    background-color: #0b0c0b;
+    color: rgb(236, 216, 67);
     font-family: 'Palatino Linotype', serif;
     cursor: pointer;
     transition: background-color 0.3s, transform 0.3s;
 }
 
 nav button:hover {
-    background-color: #f5e278;
+    background-color: #585441;
     transform: scale(1.05);
 }
 
