--- a/member.html
+++ b/member.html
@@ -515,6 +515,28 @@ window.submitComment = async (event, timelineId) => {
                 loadTimeline();
             });
         });
+
+        
+const logUserLogin = async () => {
+    if (currentUser) {
+        const loginsRef = collection(db, 'logins');
+        await addDoc(loginsRef, {
+           username:currentUser.displayName,
+            timestamp: serverTimestamp()
+        });
+    }
+};
+
+onAuthStateChanged(auth, async (user) => {
+    if (user) {
+        currentUser = user;
+        console.log("ログイン中のユーザー:", user.displayName);
+        await logUserLogin();  
+    } else {
+        console.log("ユーザーがログインしていません");
+    }
+});
+
     </script>
 </body>
 </html>
