--- a/itsweb.html
+++ b/itsweb.html
@@ -115,7 +115,7 @@
     }
 }
 }
-    </style>
+</style>
 </head>
 <body>
     <header>
@@ -132,7 +132,9 @@
     <div id="greeting" class="content active">
         <h2>ごあいさつ</h2>
         <p>
-            2024年11月1日　みんなの活字化広場
+            はじめまして。池田悠耶と申します。この度、本プロジェクトにご参加いただき、心より感謝申し上げます。
+            私たちは、歴史的資料の貴重な情報を後世に伝えるために、この簡易型学習システムである活字化プロジェクト
+            を立ち上げました。新たな発見や学びを通して、歴史の理解が深まることを願っています。どうぞよろしくお願いします。
         </p>
     </div>
     
