--- a/adminwebuseing.html
+++ b/adminwebuseing.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="position.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>管理者専用WEBサイトの使い方</title>
     <link rel="stylesheet" href="styles.css">
@@ -114,34 +115,34 @@
 
     @media (max-width: 768px) {
     header {
-        font-size: 2em; /* Adjust header font size for smaller screens */
+        font-size: 2em; 
         padding: 15px 0;
     }
 
     .container {
-        margin: 20px; /* Reduce margin for mobile devices */
-        padding: 15px; /* Reduce padding for mobile devices */
+        margin: 20px; 
+        padding: 15px; 
     }
 
     h2 {
-        font-size: 1.8em; /* Adjust section title font size */
+        font-size: 1.8em; 
     }
 
     .usage-title {
-        font-size: 1.3em; /* Adjust usage title font size */
+        font-size: 1.3em; 
     }
 
     .pdf-link {
-        font-size: 1em; /* Adjust link font size */
+        font-size: 1em; 
     }
 
     .back-button {
-        width: 100%; /* Full width for back button */
-        padding: 10px; /* Keep padding the same for consistency */
+        width: 100%; 
+        padding: 10px;
     }
 
     .pdf-embed {
-        height: 300px; /* Reduce embed height on mobile */
+        height: 300px; 
     }
 }
 </style>
