--- a/aouto.html
+++ b/aouto.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="position.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>推奨環境</title>
     <link rel="stylesheet" href="styles.css">
@@ -99,31 +100,31 @@
 
     @media (max-width: 768px) {
     header {
-        font-size: 1.5em; /* Adjust header font size for smaller screens */
-        padding: 15px; /* Adjust padding */
+        font-size: 1.5em; 
+        padding: 15px; 
     }
 
     .container {
-        margin: 20px; /* Reduce margin for mobile devices */
-        padding: 15px; /* Reduce padding for mobile devices */
+        margin: 20px; 
+        padding: 15px; 
     }
 
     h1 {
-        font-size: 2em; /* Adjust title font size */
+        font-size: 2em; 
     }
 
     .requirements h2 {
-        font-size: 1.5em; /* Adjust requirements title font size */
+        font-size: 1.5em; 
     }
 
     .requirements li {
-        font-size: 1em; /* Adjust list item font size */
+        font-size: 1em; 
     }
 
     .back-button {
-        padding: 10px; /* Adjust padding for the back button */
-        font-size: 1em; /* Adjust back button font size */
-        margin: 20px auto; /* Reduce margin */
+        padding: 10px; 
+        font-size: 1em; 
+        margin: 20px auto;
     }
 }
 
