--- a/register.html
+++ b/register.html
@@ -114,6 +114,7 @@ button:active {
 
     </style>
 <!DOCTYPE html>
+<link rel="icon" href="position.png" type="image/png">
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
