--- a/admin.html
+++ b/admin.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="position.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>管理者ページ</title>
     <link rel="stylesheet" href="styles.css"> 
@@ -152,7 +153,7 @@
             <section class="notifications">
                 <h2>お知らせ</h2>
                 <div id="notification-box">
-                    <p>現在のWEBサイト完成進捗は90％です</p>
+                    <p>お知らせはありません</p>
                 </div>
             </section>
             <section class="links">
