--- a/export.html
+++ b/export.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="position.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>データエクスポート</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
