--- a/priv.html
+++ b/priv.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="position.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>利用規約・プライバシーポリシー</title>
     <link rel="stylesheet" href="styles.css">
