--- a/admin.html
+++ b/admin.html
@@ -153,7 +153,10 @@
             <section class="notifications">
                 <h2>お知らせ</h2>
                 <div id="notification-box">
-                    <p>お知らせはありません</p>
+                    <ul>
+                        <li>一般ユーザーへのタイトル（必須）についての説明を必ずしてください。重複し記録が残りません。</li>
+                        <li>Windowsを推奨してください。MacbookなどAppleの場合、正常に作動しない可能性があります。</li>
+                    </ul>
                 </div>
             </section>
             <section class="links">
