--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ nav button:hover {
     font-size: 1em;
     border: 2px solid transparent;
     border-radius: 10px;
-    background-color: #ef735a;
+    background-color: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet);
     color: #333;
     font-family: 'Georgia', serif;
     cursor: pointer;
