--- a/vvinformation.html
+++ b/vvinformation.html
@@ -103,6 +103,15 @@
         <h1>バージョン履歴</h1>
         <ul class="version-history">
             <li>
+                <div class="version-title">version24.4🚀</div>
+                <div class="version-date">2024年10月7日</div>
+                <div class="version-desc">
+                    -活字化理解度チェック（試験運用）を開始<br>
+                    
+                </div>
+            </li>
+
+            <li>
                 <div class="version-title">version24.3🚀</div>
                 <div class="version-date">2024年9月27日</div>
                 <div class="version-desc">
